--- a/libbds/Makefile.am
+++ b/libbds/Makefile.am
@@ -1,12 +1,12 @@
 header-links: remove-links
-	HEADERLIST="$(top_srcdir)/cku*.h $(top_srcdir)/*/cku*.h"; \
+	HEADERLIST="$(top_srcdir)/bds*.h $(top_srcdir)/*/bds*.h"; \
 	for h in $$HEADERLIST; do \
 	  BASENAME=`basename $$h`; \
 	  test -r $$BASENAME || $(LN_S) $$h $$BASENAME; \
 	done
 
 remove-links: 
-	rm -f cku*.h
+	rm -f bds*.h
 
 
 all: all-am header-links
