Added the --enable-optimized-mod configure option to control the setting of BDS_USE_OPTIMIZED_MOD definition.
When BDS_USE_OPTIMIZED_MOD is set to 1, the BDS_MOD macro uses a power-of-two
modulus optimization. This also enforces all relevant vectors to use a
power-of-two allocation size.

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,7 @@ libbds_la_SOURCES = version.c
 libbds_la_LDFLAGS=-version-info 0:0:0
 libbds_la_LIBADD = $(SUBLIBS)
 
-pkginclude_HEADERS = bds_version.h
+pkginclude_HEADERS = bds_version.h bds_modulus.h
 
 noinst_HEADERS = memutil.h
 
