--- a/bds_modulus.h.in
+++ b/bds_modulus.h.in
@@ -2,7 +2,7 @@
  * @file
  * @brief Definition for the bds modulus operator
  *
- * @author Jason Graham <jason.graham@nrl.navy.mil>
+ * @author Jason Graham <jgraha8@gmail.com>
  */
 
 /* #ifndef __BDS_MODULUS_H__ */
