--- a/Makefile.in
+++ b/Makefile.in
@@ -422,14 +422,16 @@ SUBDIRS = \
 	libbds \
 	queue	\
 	stack	\
-	string
+	string \
+	vector
 
 
 #SUBLIBS = bspline/libdscsbspline.la lagrange/libdscslagrange.la psolver/libdscspsolver.la sparselu/libdscssparselu.la
 SUBLIBS = \
 	queue/libbdsqueue.la \
 	stack/libbdsstack.la \
-	string/libbdsstring.la
+	string/libbdsstring.la \
+	vector/libbdsvector.la
 
 lib_LTLIBRARIES = libbds.la
 libbds_la_SOURCES = version.c
