--- a/Makefile.in
+++ b/Makefile.in
@@ -419,7 +419,8 @@ ACLOCAL_AMFLAGS = -I m4
 
 #SUBDIRS= dscs bspline lagrange psolver sparselu
 SUBDIRS = \
-	libbds \
+	libbds	\
+	list	\
 	queue	\
 	stack	\
 	string
@@ -427,6 +428,7 @@ SUBDIRS = \
 
 #SUBLIBS = bspline/libdscsbspline.la lagrange/libdscslagrange.la psolver/libdscspsolver.la sparselu/libdscssparselu.la
 SUBLIBS = \
+	list/libbdslist.la \
 	queue/libbdsqueue.la \
 	stack/libbdsstack.la \
 	string/libbdsstring.la
