--- a/Makefile.in
+++ b/Makefile.in
@@ -435,7 +435,20 @@ SUBLIBS = \
 
 lib_LTLIBRARIES = libbds.la
 libbds_la_SOURCES = version.c
-libbds_la_LDFLAGS = -version-info 0:0:0
+#
+# The rules of thumb, when dealing with these values are:
+#
+#    Always increase the revision value.
+#
+#    Increase the current value whenever an interface has been added, removed or changed.
+#
+#    Increase the age value only if the changes made to the ABI are backward compatible.
+#
+# See: https://autotools.io/libtool/version.html
+#
+# version-info current:revision:age
+#
+libbds_la_LDFLAGS = -version-info 1:1:1
 libbds_la_LIBADD = $(SUBLIBS)
 pkginclude_HEADERS = bds_version.h bds_modulus.h
 noinst_HEADERS = memutil.h
