Incorporated test_stack into the build system.

--- a/stack/Makefile.am
+++ b/stack/Makefile.am
@@ -10,6 +10,12 @@ AM_CPPFLAGS = -I${top_srcdir}
 
 libbdsstack_la_SOURCES = stack.c
 
+check_PROGRAMS = test_stack
+test_stack_SOURCES = test_stack.c 
+test_stack_LDADD = $(top_builddir)/libbds.la
+
+TESTS = $(check_PROGRAMS)
+
 # Compiler options. Here we are adding the include directory
 # to be searched for headers included in the source code.
 #libbspline_la_CFLAGS = -I$(top_srcdir)/include
