--- a/stack/Makefile.in
+++ b/stack/Makefile.in
@@ -532,9 +532,9 @@ top_srcdir = @top_srcdir@
 # in the $(libdir) directory. For example /usr/lib
 noinst_LTLIBRARIES = libbdsstack.la
 pkginclude_HEADERS = bds_stack.h
-AM_CPPFLAGS = -I${top_srcdir}
+AM_CFLAGS = -I${top_srcdir}
 libbdsstack_la_SOURCES = stack.c
-test_stack_SOURCES = test_stack.c 
+test_stack_SOURCES = test_stack.c
 test_stack_LDADD = $(top_builddir)/libbds.la
 TESTS = $(check_PROGRAMS)
 all: all-am
