Cleaned up the serialize module and add unit tests.

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,7 @@ Makefile		\
 libbds/Makefile		\
 list/Makefile		\
 queue/Makefile 		\
+serialize/Makefile	\
 stack/Makefile		\
 string/Makefile		\
 ])
