Updated the serialization functions to be simplier and only allow valid addresses for the base_addr of a serialized object.
This simplifies the translation of the object pointers when calling
bds_update_serial_ptrs(). The NULL pointer is reserved for member
pointers who are NULL and do not point to an allocated region.

--- a/serialize/Makefile.am
+++ b/serialize/Makefile.am
@@ -10,7 +10,7 @@ AM_CFLAGS = -I${top_srcdir}
 
 libbdsserialize_la_SOURCES = serialize.c
 
-check_PROGRAMS = test_serialize1 test_serialize2 test_serialize3 test_serialize4
+check_PROGRAMS = test_serialize1 test_serialize2 test_serialize3
 test_serialize1_SOURCES = test_serialize1.c
 test_serialize1_LDADD = $(top_builddir)/libbds.la
 
@@ -19,8 +19,5 @@ test_serialize2_LDADD = $(top_builddir)/libbds.la
 
 test_serialize3_SOURCES = test_serialize3.c
 test_serialize3_LDADD = $(top_builddir)/libbds.la
-
-test_serialize4_SOURCES = test_serialize4.c
-test_serialize4_LDADD = $(top_builddir)/libbds.la
 
 TESTS = $(check_PROGRAMS)
