Added the --enable-include-prefix configure option which will prefix the inclusion of libbds headers in exported header files.
This option allows for the compiler include path of applications using
libbds to be set to a directory higher in the directory tree than the
typical include directory of where libbds is installed.

--- a/libbds/Makefile.am
+++ b/libbds/Makefile.am
@@ -1,11 +1,14 @@
 header-links: remove-links
+	test -n $(BDS_INCLUDE_PREFIX) && $(MKDIR_P) ../$(BDS_INCLUDE_PREFIX)
+	test -n $(BDS_INCLUDE_PREFIX) && $(LN_S) $(PWD) ../$(BDS_INCLUDE_PREFIX)/libbds
 	HEADERLIST="$(top_srcdir)/bds*.h $(top_srcdir)/*/bds*.h"; \
 	for h in $$HEADERLIST; do \
 	  BASENAME=`basename $$h`; \
 	  test -r $$BASENAME || $(LN_S) $$h $$BASENAME; \
 	done
 
-remove-links: 
+remove-links:
+	test -n $(BDS_INCLUDE_PREFIX) && rm -rf ../$(BDS_INCLUDE_PREFIX)
 	rm -f bds*.h
 
 
