Fixed bug with empty string Makefile test when --enable-include-prefix is not specified

--- a/libbds/Makefile.am
+++ b/libbds/Makefile.am
@@ -1,6 +1,8 @@
 header-links: remove-links
-	test -n $(BDS_INCLUDE_PREFIX) && $(MKDIR_P) ../$(BDS_INCLUDE_PREFIX)
-	test -n $(BDS_INCLUDE_PREFIX) && $(LN_S) $(PWD) ../$(BDS_INCLUDE_PREFIX)/libbds
+	if test -n "$(BDS_INCLUDE_PREFIX)"; then \
+		$(MKDIR_P) "../$(BDS_INCLUDE_PREFIX)"; \
+		$(LN_S) $(PWD) "../$(BDS_INCLUDE_PREFIX)/libbds"; \
+	fi
 	HEADERLIST="$(top_srcdir)/bds*.h $(top_srcdir)/*/bds*.h"; \
 	for h in $$HEADERLIST; do \
 	  BASENAME=`basename $$h`; \
@@ -8,7 +10,9 @@ header-links: remove-links
 	done
 
 remove-links:
-	test -n $(BDS_INCLUDE_PREFIX) && rm -rf ../$(BDS_INCLUDE_PREFIX)
+	if test -n "$(BDS_INCLUDE_PREFIX)"; then \
+		rm -rf "../$(BDS_INCLUDE_PREFIX)"; \
+	fi
 	rm -f bds*.h
 
 
