--- a/libbds/Makefile.am
+++ b/libbds/Makefile.am
@@ -1,7 +1,7 @@
 header-links: remove-links
-	if test -n "$(BDS_INCLUDE_PREFIX)"; then \
-		$(MKDIR_P) "../$(BDS_INCLUDE_PREFIX)"; \
-		$(LN_S) $(PWD) "../$(BDS_INCLUDE_PREFIX)/libbds"; \
+	if test -n "$(AM_INCLUDE_PREFIX)"; then \
+		$(MKDIR_P) "../$(AM_INCLUDE_PREFIX)"; \
+		$(LN_S) $(PWD) "../$(AM_INCLUDE_PREFIX)/libbds"; \
 	fi
 	HEADERLIST="$(top_srcdir)/bds*.h $(top_srcdir)/*/bds*.h"; \
 	for h in $$HEADERLIST; do \
@@ -10,8 +10,8 @@ header-links: remove-links
 	done
 
 remove-links:
-	if test -n "$(BDS_INCLUDE_PREFIX)"; then \
-		rm -rf "../$(BDS_INCLUDE_PREFIX)"; \
+	if test -n "$(AM_INCLUDE_PREFIX)"; then \
+		rm -rf "../$(AM_INCLUDE_PREFIX)"; \
 	fi
 	rm -f bds*.h
 
