--- a/configure.ac
+++ b/configure.ac
@@ -61,19 +61,19 @@ AS_IF([test "x$enable_optimized_mod" = "xyes"],
       [AC_SUBST([BDS_USE_OPTIMIZED_MOD],[1])],
       [AC_SUBST([BDS_USE_OPTIMIZED_MOD],[0])])
 
-AC_ARG_ENABLE([include-prefix],
-    AS_HELP_STRING([--enable-include-prefix=DIR], [set the prefix for libbds header paths]),
+AC_ARG_ENABLE([header_prefix],
+    AS_HELP_STRING([--enable-header-prefix=DIR], [set the prefix for libbds header paths]),
     [],
-    [enable_include_prefix=no])
+    [enable_header_prefix=no])
     
-case $enable_include_prefix in
+case $enable_header_prefix in
   no)
-	AC_SUBST([AM_INCLUDE_PREFIX], [""])  
-	AC_SUBST([BDS_INCLUDE_PREFIX], ["libbds"])
+	AC_SUBST([AM_HEADER_PREFIX], [""])
+	AC_SUBST([BDS_HEADER_PREFIX], ["libbds"])
 	;;
   *)
-	AC_SUBST([AM_INCLUDE_PREFIX], ["$enable_include_prefix"])  
-	AC_SUBST([BDS_INCLUDE_PREFIX], ["$enable_include_prefix/libbds"])
+	AC_SUBST([AM_HEADER_PREFIX], ["$enable_header_prefix"])  
+	AC_SUBST([BDS_HEADER_PREFIX], ["$enable_header_prefix/libbds"])
 	;;
 esac	
 
